--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,6 @@ html {
 }
 
 body {
-  height: 2000px;
-  background-image: url(../img/bgbody.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -34,13 +32,8 @@ p {
   font-family: 'Roboto Slab', serif;
 }
 
-#About {
-  background-image: url(../img/bg3.jpg);
-  -ms-grid-rows: 100px 250px 250px 100px;
-      grid-template-rows: 100px 250px 250px 100px;
-}
-
 main nav {
+  z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -106,7 +99,32 @@ main nav ul li a:hover {
   opacity: 0.8;
 }
 
+main #About {
+  background-image: url(../img/bg3.jpg);
+  -ms-grid-rows: 100px 250px 250px 100px;
+      grid-template-rows: 100px 250px 250px 100px;
+}
+
+main #Skills {
+  background-image: url(../img/bg4.jpg);
+  -ms-grid-rows: 200px 250px 250px;
+      grid-template-rows: 200px 250px 250px;
+}
+
+main #Qualification {
+  background-image: url(../img/bg5.jpg);
+  -ms-grid-rows: 200px 250px 250px;
+      grid-template-rows: 200px 250px 250px;
+}
+
+main section:hover {
+  opacity: 1;
+}
+
 main section {
+  z-index: 1;
+  border: #1e2833 dashed 3px;
+  opacity: 0.9;
   -webkit-transition: 1s;
   transition: 1s;
   display: -ms-grid;
@@ -323,4 +341,264 @@ section .img2 {
       grid-row-start: 2;
   grid-row-end: 4;
 }
+
+.main-subject {
+  background: rgba(0, 0, 0, 0.6);
+  -ms-grid-column: span 2;
+      grid-column-start: span 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.main-subject h1 {
+  font-size: 70pt;
+  padding: 5px 15px;
+  border-radius: 25px;
+}
+
+.soft-skills {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  -ms-grid-row-span: 2;
+      grid-row-end: span 2;
+  background-color: #13598f;
+  background: rgba(0, 0, 0, 0.6);
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.soft-skills .soft {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.soft-skills .soft p {
+  background-color: #123c5c;
+  color: #ececec;
+  width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 70px;
+  border-radius: 15px;
+  font-size: 15pt;
+}
+
+.technical {
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  -ms-grid-row: span 2;
+      grid-row-start: span 2;
+  background-color: rgba(230, 230, 230, 0.9);
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.technical .tech {
+  min-height: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.technical .tech h3 {
+  width: 20%;
+  font-family: 'Roboto Slab', serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #1e2833;
+  font-size: 17pt;
+}
+
+.technical .tech .progress-bar {
+  border-radius: 25px;
+  background-color: #acb0b3;
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.technical .tech .progress-bar .progress {
+  border-radius: 25px;
+  width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #1e2833;
+  padding: 0px 15px;
+  background-color: #123c5c;
+}
+
+.quali {
+  -ms-grid-column: span 2;
+      grid-column-start: span 2;
+  -ms-grid-row: span 2;
+      grid-row-start: span 2;
+  background-color: rgba(16, 26, 21, 0.9);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.quali .unv-img {
+  background-color: #ffffff;
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.quali .unv-img .unv {
+  background-image: url(../img/unvimg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+  min-height: 300px;
+  min-width: 300px;
+}
+
+.quali .des {
+  color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.quali .des h3 {
+  font-size: 20pt;
+  margin: 20px 10px;
+}
+
+.quali .des p {
+  font-size: 12pt;
+  margin: 20px 10px;
+}
+
+/*
+@keyframes prog1{
+0%{
+    width: 70%;
+    content: "70%";
+}
+10%{
+    
+    width: 10%;
+    content: "10%";
+}
+20%{
+    
+    width: 20%;
+    content: "20%";
+}
+30%{
+    
+    width: 30%;
+    content: "30%";
+}
+40%{
+    
+    width: 40%;
+    content: "40%";
+}
+50%{
+
+    width: 50%;
+    content: "50%";
+}
+60%{
+    
+    width: 60%;
+    content: "60%";
+}
+70%{
+    
+    width: 70%;
+    content: "70%";
+}
+80%{
+    
+    width: 80%;
+    content: "80%";
+}
+90%{
+    
+    width: 90%;
+    content: "90%";
+}
+100%{
+    
+    width: 100%;
+    content: "100%";
+}
+}
+*/
 /*# sourceMappingURL=main.css.map */
