--- a/css/main.scss
+++ b/css/main.scss
@@ -11,8 +11,8 @@ html{
 }
 body{
    
-    height: 2000px;
-    background-image: url(../img/bgbody.png);
+   
+    
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -31,13 +31,10 @@ h2{
 p{
     font-family: 'Roboto Slab', serif;
 }
-#About{
-    background-image: url(../img/bg3.jpg);
-    grid-template-rows: 100px 250px 250px 100px;
-}
+
 main{
 nav{
-   
+   z-index: 2;
     display: flex;
     background-image: url(../img/navbg.jpg);
     background-size: cover;
@@ -85,8 +82,28 @@ nav{
         
     }
 }
-
+#About{
+    background-image: url(../img/bg3.jpg);
+    grid-template-rows: 100px 250px 250px 100px;
+}
+#Skills{
+    background-image: url(../img/bg4.jpg);
+    grid-template-rows: 200px 250px 250px ;
+    
+}
+#Qualification{
+    background-image: url(../img/bg5.jpg);
+    grid-template-rows: 200px 250px 250px ;
+    
+}
+section:hover{
+opacity: 1;
+}
     section{
+        z-index: 1;
+        border: #1e2833 dashed 3px;
+       
+        opacity: 0.9;
         transition: 1s;
         display: grid;
         grid-template-columns: repeat(2,50%) ;
@@ -239,4 +256,210 @@ section{
         grid-row-start: 2;
         grid-row-end:4;
     }
+    
 }
+
+    .main-subject{
+        background: rgba(0, 0, 0, 0.6);
+        grid-column-start: span 2;
+        display: flex;
+        justify-content: center;
+        align-items:flex-end ;
+        
+        h1{
+            font-size:70pt;
+            padding: 5px 15px;
+            border-radius: 25px;
+        }
+    }
+  
+    
+
+
+
+.soft-skills{
+    grid-column-start: 1;
+    grid-row-start: 2;
+    grid-row-end: span 2;
+    background-color: rgb(19, 89, 143); 
+    background:  rgba(0, 0, 0, 0.6);
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    .soft{
+       
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        p{ 
+            background-color: #123c5c;
+            color:  rgb(236, 236, 236);
+            width: 40%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 70px;
+            border-radius: 15px;
+            font-size: 15pt;
+        }
+    }
+    
+    
+}
+.technical{
+    grid-column-start: 2;
+    grid-row-start: span 2;
+    background-color: rgba(230, 230, 230 , 0.9);
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    .tech{
+        min-height: 10%;
+        display: flex;
+        justify-content: space-between;
+        
+        h3{
+            width: 20%;
+            font-family: 'Roboto Slab', serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #1e2833;
+            font-size: 17pt;
+        }
+        .progress-bar{
+
+            border-radius: 25px;
+            background-color: rgb(172, 176, 179);
+            width: 80%;
+            display: flex;
+        
+            .progress{    
+                border-radius: 25px;
+             
+            width: 70%;
+             display: flex;
+             justify-content: flex-end;
+             align-items: center;
+             color: #1e2833;
+             padding: 0px 15px;
+             background-color: #123c5c;
+            }
+        }
+       
+        
+       
+    }
+
+
+
+}
+.quali{
+    grid-column-start:span 2;
+    grid-row-start: span 2;
+    background-color: rgba(16, 26, 21, 0.9);
+   display: flex;
+   .unv-img{
+       background-color: #ffffff;
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .unv{
+            background-image: url(../img/unvimg.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: 100%;
+        min-height: 300px;
+        min-width: 300px;
+        }
+    }
+   .des{
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    h3{
+        font-size: 20pt;
+        margin: 20px 10px;
+    }
+    p{
+        font-size: 12pt;
+        margin: 20px 10px;
+    }
+   }
+   
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+@keyframes prog1{
+0%{
+    width: 70%;
+    content: "70%";
+}
+10%{
+    
+    width: 10%;
+    content: "10%";
+}
+20%{
+    
+    width: 20%;
+    content: "20%";
+}
+30%{
+    
+    width: 30%;
+    content: "30%";
+}
+40%{
+    
+    width: 40%;
+    content: "40%";
+}
+50%{
+
+    width: 50%;
+    content: "50%";
+}
+60%{
+    
+    width: 60%;
+    content: "60%";
+}
+70%{
+    
+    width: 70%;
+    content: "70%";
+}
+80%{
+    
+    width: 80%;
+    content: "80%";
+}
+90%{
+    
+    width: 90%;
+    content: "90%";
+}
+100%{
+    
+    width: 100%;
+    content: "100%";
+}
+}
+*/
