--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,3 @@
-
 *{
 
     margin: 0;
@@ -10,9 +9,7 @@ html{
     scroll-behavior: smooth ; 
 }
 body{
-   
-   
-    
+
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -92,6 +89,11 @@ nav{
     
 }
 #Qualification{
+    background-image: url(../img/bg5.jpg);
+    grid-template-rows: 200px 250px 250px ;
+    
+}
+#Certificate{
     background-image: url(../img/bg5.jpg);
     grid-template-rows: 200px 250px 250px ;
     
@@ -334,17 +336,19 @@ section{
             width: 80%;
             display: flex;
         
-            .progress{    
+            .progress::after{
+                    
                 border-radius: 25px;
-             
+             animation:prog1 1s ease-in-out ;
             width: 70%;
-             display: flex;
+             display:flex;
              justify-content: flex-end;
              align-items: center;
              color: #1e2833;
              padding: 0px 15px;
              background-color: #123c5c;
             }
+             
         }
        
         
@@ -389,9 +393,41 @@ section{
         margin: 20px 10px;
     }
    }
-   
+
     
 }
+.certificate{
+    background-color: rgba(16, 26, 21, 0.9);
+    grid-column-start: span 2;
+    grid-row-start: span 2;
+    display: flex;
+       .company-img{
+        background-color: #071422;
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-image: url(../img/coding-academy.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+     
+       }
+       .des{
+        color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        h3{
+            font-size: 20pt;
+            margin: 20px 10px;
+        }
+        p{
+            font-size: 12pt;
+            margin: 20px 10px;
+        }
+       }
+   }
 
 
 
