--- a/css/main.scss
+++ b/css/main.scss
@@ -7,12 +7,135 @@
 }
 html{
     scroll-behavior: smooth ; 
+    
+} 
+h3{
+
+    font-size: 30pt;
+    color: #dadde0;
+    font-family: 'Roboto Slab', serif;
+    
+    padding: 2%;
+
 }
+footer{
+       display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 350px 350px ;
+        background-color: #1e2833;
+        color: aliceblue;
+        .refernce{
+            width: 100%;
+            background-color: #021312;
+            background: rgba(0, 0, 0, 0.6);
+            grid-column-start: span 2;
+            display: flex;
+        .refernce1{
+            border: 2px dashed rgb(17, 44, 75);
+            width: 50%;
+            
+           
+            display: flex;
+            
+            align-items: center;
+            
+       
+        .img-triner{
+       
+            background-image: url(https://media-exp1.licdn.com/dms/image/C4D0BAQEIG5RkDRNPvg/company-logo_200_200/0/1574431121488?e=1655337600&v=beta&t=D4QbdfDXFNA5dnWSL-1P9JlC4SDPs_GlPNQw1x2yA4k);
+            width: 50%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size:contain ;
+            border-radius: 25px;
+            max-width: 50%;
+            min-height: 100%;
+            
+        }
+        .countact{
+            width: 50%;
+            padding: 15px;
+            h3{
+                margin-bottom: 5px;
+            }
+        }
+       
+    }
+    .refernce2{
+        border: 2px dashed rgb(17, 44, 75);
+        width: 50%;
+       
+        grid-column-start: span 2;
+        display: flex;
+        
+        align-items: center;
+        
+   
+    .img-triner{
+   
+        background-image: url(https://media-exp1.licdn.com/dms/image/C4E03AQHZksRYWTDoZA/profile-displayphoto-shrink_800_800/0/1631776920650?e=1652918400&v=beta&t=x0Hn79iG7juCSm0SMoxrZLyQwoBWE9veLM_YMPJQ7ss);
+        width: 50%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size:contain ;
+        border-radius: 25px;
+        max-width: 50%;
+        min-height: 100%;
+        
+    }
+    .countact{
+        width: 50%;
+        padding: 15px;
+        h3{
+            margin-bottom: 5px;
+        }
+    }
+}
+}
+        .countact-me{
+           
+            grid-column-start: span 2;
+            grid-row-start: 2 ;
+           background-color: #123c5c;
+           display : flex ;
+           justify-content: center;
+           align-items: center;
+           .soial-media{
+               width: 50%;
+               min-height: 100%;
+               background-color: aliceblue;
+               display: flex;
+               justify-content: center;
+               align-items: center;
+               flex-direction: column;
+               
+           }
+           h1{
+               width: 50%;
+               text-align: center;
+               
+           }
+           a{
+               text-decoration: none;
+               color: #123c5c;
+               font-size: 20pt;
+               margin-top: 30px;
+               transition: 1s;
+           }
+           a:hover{
+
+            background-color: #021312;
+            color: aliceblue;
+            padding: 20px;
+        }
+        }
+    }
 body{
 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+   
 }
 h1 {
     color:azure;
@@ -27,21 +150,22 @@ h2{
 }
 p{
     font-family: 'Roboto Slab', serif;
+
 }
 
 main{
 nav{
-   z-index: 2;
+    z-index: 2;
     display: flex;
     background-image: url(../img/navbg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-        min-height: 70px;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-        position: sticky;
-        top: 0px;
+    min-height: 70px;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: center;
+    position: sticky;
+    top: 0px;
         a{
             text-decoration: none;
             h1{
@@ -58,6 +182,7 @@ nav{
         width: 80%;
         justify-content: space-evenly;
         align-items: center;
+        
         li{
             a{
                 color: azure;
@@ -85,7 +210,7 @@ nav{
 }
 #Skills{
     background-image: url(../img/bg4.jpg);
-    grid-template-rows: 200px 250px 250px ;
+    grid-template-rows: 200px 350px 350px ;
     
 }
 #Qualification{
@@ -116,13 +241,14 @@ opacity: 1;
         background-size: cover;        
     
     .img{
-        margin-left: 10%;
+        z-index: 2;
+        margin-left: 30%;
         background-image: url(../img/meimg.jpg);
         background-size: cover;
         opacity: 0.9;
         background-position: center;
-        width: 400px;
-        height: 400px;
+        width: 350px;
+        height: 350px;
         border-radius: 100%;
         transition: 1s;
         grid-row-start: 2;
@@ -138,14 +264,15 @@ opacity: 1;
         border-style:8px double black;
     }   
     .Name{
-       
+       z-index: 3;
         grid-column-start: span 2;
         grid-row-start: 2;
-        grid-row-end:4;
+        grid-row-end:3;
         display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        min-height: 100%;
         
         
         div{
@@ -183,26 +310,28 @@ opacity: 1;
     }
     }
     .links{
-        background-color: black  ;
-        
-        background: rgba(0, 0, 0, 0.4);
+    background-color: black  ; 
+    background: rgba(0, 0, 0, 0.4);
     grid-column-start: span 2;
-    grid-row-start: span 4;     
+    z-index: 2;
+    grid-row-start: 3;
+    grid-column-end: 4;     
     transition: 1s;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    
      .main-nav-links{
+         
          margin-right: 10%;
          display: flex;
          justify-content: space-evenly;
          min-height: 250px;
          padding-bottom: 5%;
-         width: 30%;
+         width: 100%;
          align-items: center;
          transition: 1s;
          flex-wrap: wrap;
+
          a{
              color: azure;
              border-radius: 5px;
@@ -224,7 +353,7 @@ opacity: 1;
             z-index: 2;
     }
 
-    }
+}
 }
 section{
     .text{
@@ -278,15 +407,29 @@ section{
     
 
 
-
+.con{
+    grid-column-start: span 2;
+    grid-row-start:span  3;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    .oft{
+        h3{
+            margin-top: 30px;
+        }
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    
 .soft-skills{
-    grid-column-start: 1;
-    grid-row-start: 2;
+ margin-top: 50px;
+ flex-wrap: wrap;
     grid-row-end: span 2;
     background-color: rgb(19, 89, 143); 
     background:  rgba(0, 0, 0, 0.6);
     display: inline-flex;
-    flex-direction: column;
+    width: 100%;
     justify-content: space-evenly;
     .soft{
        
@@ -296,7 +439,9 @@ section{
         p{ 
             background-color: #123c5c;
             color:  rgb(236, 236, 236);
-            width: 40%;
+            width: 100%;
+            min-height: 50%;
+            padding: 0px 15px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -308,49 +453,36 @@ section{
     
     
 }
+    }
+    .bg{
+        background: rgba(0, 0, 0, 0.8);
+    }
 .technical{
-    grid-column-start: 2;
-    grid-row-start: span 2;
-    background-color: rgba(230, 230, 230 , 0.9);
-    display: inline-flex;
+    margin-top: 50px;   
+    display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
     .tech{
         min-height: 10%;
         display: flex;
-        justify-content: space-between;
-        
+        flex-wrap: wrap;
+        background-color: rgba(230, 230, 230 , 0.9);
+        justify-content: space-evenly;
+        width: 100%;
         h3{
-            width: 20%;
-            font-family: 'Roboto Slab', serif;
             display: flex;
             justify-content: center;
             align-items: center;
             color: #1e2833;
             font-size: 17pt;
-        }
-        .progress-bar{
-
             border-radius: 25px;
-            background-color: rgb(172, 176, 179);
-            width: 80%;
-            display: flex;
-        
-            .progress::after{
-                    
-                border-radius: 25px;
-             animation:prog1 1s ease-in-out ;
-            width: 70%;
-             display:flex;
-             justify-content: flex-end;
-             align-items: center;
-             color: #1e2833;
-             padding: 0px 15px;
-             background-color: #123c5c;
-            }
-             
+
         }
        
+        }
+     
         
        
     }
@@ -358,6 +490,7 @@ section{
 
 
 }
+
 .quali{
     grid-column-start:span 2;
     grid-row-start: span 2;
@@ -441,61 +574,61 @@ section{
 
 
 
-/*
-@keyframes prog1{
-0%{
-    width: 70%;
-    content: "70%";
-}
-10%{
-    
-    width: 10%;
-    content: "10%";
-}
-20%{
-    
-    width: 20%;
-    content: "20%";
-}
-30%{
-    
-    width: 30%;
-    content: "30%";
-}
-40%{
-    
-    width: 40%;
-    content: "40%";
-}
-50%{
 
-    width: 50%;
-    content: "50%";
-}
-60%{
+
+// @keyframes prog1{
+// 0%{
+//     width: 100%;
+   
+// }
+// 10%{
     
-    width: 60%;
-    content: "60%";
-}
-70%{
+//     width: 10%;
+   
+// }
+// 20%{
     
-    width: 70%;
-    content: "70%";
-}
-80%{
+//     width: 20%;
+   
+// }
+// 30%{
     
-    width: 80%;
-    content: "80%";
-}
-90%{
+//     width: 30%;
     
-    width: 90%;
-    content: "90%";
-}
-100%{
+// }
+// 40%{
     
-    width: 100%;
-    content: "100%";
-}
-}
-*/
+//     width: 40%;
+    
+// }
+// 50%{
+
+//     width: 50%;
+    
+// }
+// 60%{
+    
+//     width: 60%;
+    
+// }
+// 70%{
+    
+//     width: 70%;
+   
+// }
+// 80%{
+    
+//     width: 80%;
+    
+// }
+// 90%{
+    
+//     width: 90%;
+    
+// }
+// 100%{
+    
+//     width: 100%;
+    
+// }
+// }
